Fixed UI loading icon, implement cookie system for browser

--- a/Eventa.Browser/wwwroot/index.html
+++ b/Eventa.Browser/wwwroot/index.html
@@ -12,6 +12,7 @@
 <div id="out">
 </div>
 <script type='module' src="./main.js"></script>
+<script type='module' src="./cookieHelper.js"></script>
 </body>
 
 </html>
