Added server to production

--- a/Eventa.Browser/wwwroot/index.html
+++ b/Eventa.Browser/wwwroot/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body style="margin: 0; overflow: hidden">
-<div id="out">
-</div>
-<script type='module' src="./main.js"></script>
-<script type='module' src="./cookieHelper.js"></script>
+    <div id="out">
+        <div class="loader"></div>
+    </div>
+    <script type='module' src="./main.js"></script>
+    <script type='module' src="./cookieHelper.js"></script>
 </body>
 
 </html>
