--- a/Eventa.Server/wwwroot/pages/error-check.html
+++ b/Eventa.Server/wwwroot/pages/error-check.html
@@ -1,10 +1,76 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Check event</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Check Event</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: #e0e0e0;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .card {
+            background: white;
+            border-radius: 15px;
+            border: 2px solid #d0d0d0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 280px;
+            width: 100%;
+            padding: 30px 25px;
+            text-align: center;
+        }
+
+        .header {
+            margin-bottom: 25px;
+        }
+
+            .header h2 {
+                font-size: 16px;
+                font-weight: 500;
+                color: #ffb3b3;
+            }
+
+        .error-code {
+            font-size: 12px;
+            color: #ffb3b3;
+            margin-top: 15px;
+            font-weight: 500;
+        }
+
+        .status-icon {
+            width: 120px;
+            height: 120px;
+            margin: 0 auto 30px;
+        }
+    </style>
 </head>
 <body>
+    <div class="card">
+        <div class="header">
+            <h2>QR code invalid</h2>
+            <div class="error-code">[Error code]</div>
+        </div>
 
+        <div class="status-icon">
+            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" width="120" height="120">
+                <path d="M25 25 L75 75 M75 25 L25 75"
+                      stroke="#ff9999"
+                      stroke-width="12"
+                      stroke-linecap="round" />
+            </svg>
+        </div>
+    </div>
 </body>
 </html>
