--- a/Eventa.Server/wwwroot/pages/valid-check.html
+++ b/Eventa.Server/wwwroot/pages/valid-check.html
@@ -1,12 +1,140 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Check event</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Check Event</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: #e0e0e0;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .card {
+            background: white;
+            border-radius: 15px;
+            border: 2px solid #d0d0d0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 280px;
+            width: 100%;
+            padding: 30px 25px;
+            text-align: center;
+        }
+
+        .header {
+            margin-bottom: 25px;
+        }
+
+            .header h2 {
+                font-size: 16px;
+                font-weight: 500;
+                color: #ffb3b3;
+                margin-bottom: 15px;
+            }
+
+        .icon-buttons {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .icon-btn {
+            width: 35px;
+            height: 35px;
+            background: #ffb3b3;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 18px;
+        }
+
+        .status-icon {
+            width: 120px;
+            height: 120px;
+            margin: 0 auto 30px;
+        }
+
+        .event-info {
+            margin-bottom: 25px;
+        }
+
+            .event-info h1 {
+                font-size: 18px;
+                font-weight: 600;
+                color: #333;
+                margin-bottom: 5px;
+            }
+
+            .event-info .datetime {
+                font-size: 14px;
+                color: #666;
+            }
+
+        .tickets {
+            margin: 20px 0;
+            text-align: left;
+        }
+
+        .ticket {
+            background: #f9f9f9;
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            padding: 12px 15px;
+            margin-bottom: 10px;
+            font-size: 13px;
+            color: #333;
+        }
+
+            .ticket:last-child {
+                margin-bottom: 0;
+            }
+    </style>
 </head>
 <body>
-    <h1>{EventName}</h1>
-    <h1>{EventDateTime}</h1>
-    <div>{Tickets}</div>
+    <div class="card">
+        <div class="header">
+            <h2>QR code valid</h2>
+            <div class="icon-buttons">
+                <button class="icon-btn">📷</button>
+                <button class="icon-btn">🔄</button>
+            </div>
+        </div>
+
+        <div class="status-icon">
+            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" width="120" height="120">
+                <path d="M20 50 L40 70 L80 30"
+                      stroke="#7ed97e"
+                      stroke-width="12"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round" />
+            </svg>
+        </div>
+
+        <div class="event-info">
+            <h1>{EventName}</h1>
+            <div class="datetime">{EventDateTime}</div>
+        </div>
+
+        <div class="tickets">
+            {Tickets}
+        </div>
+    </div>
 </body>
 </html>
