Add error message for qr-code check

--- a/Eventa.Server/wwwroot/pages/error-check.html
+++ b/Eventa.Server/wwwroot/pages/error-check.html
@@ -60,7 +60,7 @@
     <div class="card">
         <div class="header">
             <h2>QR code invalid</h2>
-            <div class="error-code">[Error code]</div>
+            <div class="error-code">{ErrorMessage}</div>
         </div>
 
         <div class="status-icon">
