Probably on good path to implement browser

--- a/Eventa.Browser/wwwroot/index.html
+++ b/Eventa.Browser/wwwroot/index.html
@@ -14,6 +14,7 @@
     </div>
     <script type='module' src="./main.js"></script>
     <script type='module' src="./cookieHelper.js"></script>
+    <script type='module' src="./google-auth-helper.js"></script>
 </body>
 
 </html>
